--- a/ArcBall/codebase/codebase.vcxproj
+++ b/ArcBall/codebase/codebase.vcxproj
@@ -11,15 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1927B688-0D28-404C-9577-83C94BFBC158}</ProjectGuid>
+    <ProjectGuid>{3FFB100D-0C15-40FA-98BB-D6E482BABBF3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MeshDisplay</RootNamespace>
+    <RootNamespace>codebase</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,11 +41,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\freeglut\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\freeglut\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)freeglut\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)freeglut\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -59,6 +59,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -77,23 +78,21 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bbox.cpp" />
-    <ClCompile Include="defMesh.cpp" />
-    <ClCompile Include="glm.cpp" />
-    <ClCompile Include="glMain.cpp" />
-    <ClCompile Include="plyModel.cpp" />
+    <ClCompile Include="ObjModel.cpp" />
+    <ClCompile Include="ObjModel2.cpp" />
+    <ClCompile Include="ObjParser.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="TTuple.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="bbox.h" />
-    <ClInclude Include="defMesh.h" />
-    <ClInclude Include="glm.h" />
-    <ClInclude Include="plyModel.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ToDo.txt" />
+    <ClInclude Include="debug.h" />
+    <ClInclude Include="ObjModel.h" />
+    <ClInclude Include="ObjParser.h" />
+    <ClInclude Include="TTuple.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
