--- a/MeshDisplay/MeshDisplay/MeshDisplay.vcxproj.filters
+++ b/MeshDisplay/MeshDisplay/MeshDisplay.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="simpleMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="kinectSensor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ToDo.txt">
